# PopConn

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index copy.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/user_guide/: covariance_connectomes.rst  index.rst
notebooks/: popconn_group_comparison_tutorial.ipynb  popconn_tutorial_covconn.ipynb
src/popconn/: __init__.py
src/popconn/core/: __init__.py  core.py  matrix.py
src/popconn/permute/: permutation.py
src/popconn/stats/: __init__.py  comparator.py  group_comparison.py  metrics.py
src/popconn/utils/: checks.py
tests/: __init__.py  test_covconn.py  test_group_comparator.py  test_metrics.py  test_popconn.py
