[tool.poetry]
name = "popconn"
version = "0.1.0"
description = "Python tools for analyzing population-level covariance connectomes from inter-subject correlations"
authors = ["Gal Kepler <galkepler@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GalKepler/popconn"
repository = "https://github.com/GalKepler/popconn"
documentation = "https://github.com/GalKepler/popconn/blob/master/changelog.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.3"
black = "^25.1.0"
pytest = "^8.3.5"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = "^7.0"
mypy = "^1.0"
ruff = "^0.3"
black = "^25.1.0"
isort = "^5.12"
pre-commit = "^3.6"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Mypy
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["popconn"]
src_paths = ["src"]

[tool.ruff]
line-length = 88
exclude = ["tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]
